# CPP-projects

./: Readme.md
Project1/: Readme.md  a.out  playg.c  playground.c  simple_calculator1.c  simple_calculator2.c  simple_calculator3.c  simple_calculator5.c
Project1/simple_calcualtor4/: a.out  float_number_display.c  float_number_display.h  playground_4.c  simple_calculator4.c
Project2/: Readme.md  a.out  example.txt  playground1.c  playground3.c  plot.ipynb
Project2/V1/: Readme.md  mat_mul.c  playground.c
Project2/V2/: Makefile  Readme.md  mat_mul.c  mat_mul.h  testlog.csv
Project2/V3/: Makefile  Readme.md  mat_mul  mat_mul.d  playground.c  playground.d  testlog.csv
Project3/: Readme.md  play.cpp  plot.ipynb
Project3/V1/: Makefile  Readme.md  mat_mul.c  mat_mul.h  playground.c  playground2.c
Project3/V2-cpp/: dotproduct.hpp  main.cpp  mat_mul.hpp  testlog_2024_10_06_09_50.csv
Project3/V2-cpp/trash/: CMakeLists_.txt  dotproduct.cpp  dotproduct_2025_10_06_01_11.cpp  main2.cpp
Project3/oblas/: CMakeLists.txt  checkobla.cpp  main.cpp
Project4/: Readme.md  a.out  main.cpp  playground.cpp  playground2.cpp  playground3.cpp
Project4/V1/: CMakeLists.txt  Readme.md  main.cpp  myMatrix.hpp
Project4/V1/trash/: main copy.cpp  myMatrix copy.hpp  myMatrix.cpp
Project4/fromP3/: CMakeLists.txt  Readme.md  dotproduct.cpp  mat_mul.cpp  testlog_2024_10_05_23_13.csv  testlog_2024_10_06_01_11.csv
